# vio

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  algo.cpp  algo_with_cam0.cpp  algo_withoutpyr.cpp  callgrind.out.22815  callgrind.out.51443  compile.sh  efficiency_test.py  imu.cpp  main.cpp  run.sh  temp.ipynb  test.cpp
.PVS-Studio/: depend_info.json
.github/workflows/: ci.yml
apps/: imu_tracking_app.cpp  vio_app.cpp
bench_csv/with_avx2/: lena.csv  test.csv  test1.csv  test2.csv  test_.csv  test__.csv
bench_csv/without_avx2/: lena.csv  test.csv  test1.csv  test2.csv  test3.csv  test_.csv
bench_shi_tomasi/: raw_results.csv  summary.csv
benchmark_results/: raw_results.csv  summary.csv  time.csv
benchmark_results2_0/: raw_results.csv  summary.csv  time.csv
callgrind/: callgrind.out.1thread  callgrind.out.22002  callgrind.out.38044  callgrind.out.8thread
data/: frame_timestamps.txt
include/: abc_thread_pool.hpp  feature_refresh.hpp  function_wrapper.hpp  gaussian_blur.hpp  imu.hpp  keypoint_detector.hpp  lk_tracker_without_pyr.hpp  parallel_utils.hpp  shi_tomasi.hpp  sobel.hpp  thread_safe_queue.hpp  tpool_default.hpp
include/core/: data_generator.h  data_loader.h  dataset.h  dataset_streamer.h  projection.hpp  rerun_stream.h  tracked_frame.hpp  types.h  types.hpp  viewer.h  vio_runner.h
include/estimation/: sliding_window_estimator.hpp  visual_inertial_initializer.hpp
include/frontend/: feature_extractor.hpp  feature_tracker.hpp  frame_pose_sync.hpp  imu_tracking_pipeline.hpp  pivot_frame.hpp  vision_compute_backend.hpp  visual_frontend.hpp
include/geometry/: camera_model.hpp  extrinsics.hpp  geometry_backend.hpp  landmark.hpp  landmark_map.hpp  pnp_solver.hpp  triangulator.hpp
include/imu/: imu.h  imu.hpp  imu_preintegration.hpp  imu_processor.hpp
include/io/: data_streamer.hpp  dataset_loader.hpp  image_sequence_reader.hpp  landmark_output_writer.hpp  tracked_output_writer.hpp
include/keypoint_extraction/: abc_thread_pool.hpp  feature_refresh.hpp  function_wrapper.hpp  gaussian_blur.hpp  keypoint_detector.hpp  parallel_utils.hpp  shi_tomasi.hpp  sobel.hpp  thread_safe_queue.hpp  tpool_default.hpp
include/keypoints/: function_wrapper.hpp  gaussian_blur.hpp  keypoint_detector.hpp  parallel_utils.hpp  shi_tomasi.hpp  sobel.hpp  thread_safe_queue.hpp  tpool_default.hpp
include/pipeline/: pipeline_pivot.hpp  vio_app_pipeline.hpp  vio_pipeline.hpp
include/tracking/: feature_refresh.hpp  klt_tracker.h  lk_tracker.hpp  tracking_vis.hpp
include/triangulation/: camera_model.hpp  extrinsics.hpp  landmark.hpp  triangulator.hpp
include/vio/: data_generator.h  data_loader.h  pose_detection.h  rerun_stream.h  stereo_triangulation.h  types.h  viewer.h
include/visualization/: points_video_renderer.hpp  rerun_visualizer.hpp
python/: evaluate.py  requirements.txt
python/vio_py/: __init__.py  __main__.py  cli.py  data_generator.py  data_loader.py  viewer.py  vio_types.py
scripts/: plot_avx_compare.py  plot_benchmark.py  plot_convolution_benchmark.py  run_benchmark.py
src/: algo.cpp  algo_with_cam0.cpp  algo_with_cam0_without_pyr.cpp  benchmark_convolution_only.cpp  benchmark_shi_tomasi.cpp  compare_keypoint_extraction.cpp  data_generator.cpp  data_loader.cpp  feature_refresh.cpp  gaussian_blur.cpp  imu.cpp  imu.hpp  lk_tracker.cpp  lk_tracker_without_pyr.cpp  main.cpp  pose_detection.cpp  rerun_stream.cpp  shi_tomasi.cpp  shi_tomasi_main.cpp  sobel.cpp  stereo_triangulation.cpp  tracking_vis.cpp  viewer.cpp
src/app/: main.cpp
src/core/: data_generator.cpp  data_loader.cpp  dataset.cpp  dataset_streamer.cpp  projection.cpp  rerun_stream.cpp  viewer.cpp  vio_runner.cpp
src/estimation/: sliding_window_estimator.cpp  visual_inertial_initializer.cpp
src/frontend/: feature_extractor.cpp  feature_tracker.cpp  frame_pose_sync.cpp  imu_tracking_pipeline.cpp  pivot_frame.cpp  vision_compute_backend.cpp  visual_frontend.cpp
src/geometry/: geometry_backend.cpp  landmark_map.cpp  pnp_solver.cpp  triangulator.cpp
src/imu/: imu.cpp  imu_preintegration.cpp  imu_processor.cpp
src/io/: data_streamer.cpp  dataset_loader.cpp  image_sequence_reader.cpp  landmark_output_writer.cpp  tracked_output_writer.cpp
src/keypoint_extraction/: feature_refresh.cpp  gaussian_blur.cpp  shi_tomasi.cpp  sobel.cpp
src/keypoints/: gaussian_blur.cpp  shi_tomasi.cpp  sobel.cpp
src/pipeline/: pipeline_pivot.cpp  vio_app_pipeline.cpp  vio_pipeline.cpp
src/tracking/: feature_refresh.cpp  klt_tracker.cpp  lk_tracker.cpp  tracking_vis.cpp
src/triangulation/: triangulator.cpp
src/visualization/: points_video_renderer.cpp  rerun_visualizer.cpp
temp/: dataset_streamer.cpp
tests/: test_pose_triangulation.cpp  test_triangulation.cpp  test_visual_inertial_initializer.cpp
